--- a/src/injection/theater.scss
+++ b/src/injection/theater.scss
@@ -5,3 +5,11 @@ body, #main-ntg {
     height: 100vh;
     background-color: $theater-background !important;
 }
+
+#sectionWrap {
+    visibility: hidden;
+}
+
+#foot {
+    visibility: hidden;
+}
